# kachalka

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606270001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: __init__.py  analytics.py  exercises.py  health.py  workouts.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  seed.py  session.py
backend/app/models/: __init__.py  exercise.py  muscle_group.py  record.py  workout.py
backend/app/schemas/: __init__.py  analytics.py  exercise.py  health.py  workout.py
backend/app/services/: __init__.py  analytics.py  exercises.py  workouts.py
backend/tests/: __init__.py  test_analytics.py  test_exercises.py  test_health.py  test_models.py  test_workouts.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: analytics.ts  client.test.ts  client.ts  exercises.ts  health.ts  workouts.ts
frontend/src/components/: AppHeader.vue  AppNavigation.vue
frontend/src/i18n/: index.ts
frontend/src/layouts/: AppLayout.vue
frontend/src/locales/: en.ts  uk.test.ts  uk.ts
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/styles/: main.css
frontend/src/views/: DashboardView.vue  (+3 more)
scripts/: check_learning_comments.py
