[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "kachalka-backend"
version = "0.1.0"
description = "Backend API for the Kachalka workout tracker"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14",
  "asyncpg>=0.30",
  "fastapi>=0.115",
  "pydantic-settings>=2.7",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pre-commit>=4.0",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
